--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -8,7 +8,8 @@
     <th>Nome</th>
     <th>Matricula</th>
     <th>Email</th>
-    <th colspan="3"></th>
+    <th>Iduff</th>
+    <th colspan="4"></th>
   </tr>
   </thead>
 
@@ -18,6 +19,8 @@
       <td><%= student.nome %></td>
       <td><%= student.matricula %></td>
       <td><%= student.email %></td>
+      <td><%= student.iduff %></td>
+
       <td><%= link_to 'Show', student %></td>
       <td><%= link_to 'Edit', edit_student_path(student) %></td>
       <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
