--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <body>
-<div id="titulo"><h1>Sistema Original Segunda Linha UFFMeio</h1></div>
+<div id="titulo"><h1>Sistema Original Segunda Linha UFFMeio</h1></div><br>
 <p id="inscricao">Por favor, inicie sua sessão</p>
 <div id="gatinho">
   <img src="https://purepng.com/public/uploads/medium/515023081909vuwgucjvi37ke4sxsgi38bohmwvueskzfkd2gegbprpz9pc9z321pllryanukxpe9uxvuxltoszhjmxhlwff3anbuu2x4dcspqa.png" alt="Italian Trulli">
