--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,4 +9,6 @@
 <div class="Log-button">
   <%= link_to("Login", new_user_session_path) %>
 </div>
+<br><br><br><br><br>
+<p id="warning">(Pode conter gatinhos curiosos)</p>
 </body>
