--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,14 @@
-<body>
+<div>
 <div id="titulo"><h1>Sistema Original Segunda Linha UFFMeio</h1></div><br>
-<p id="inscricao">Por favor, inicie sua sessão</p>
+<div id="inscricao"><p>Por favor, inicie sua sessão</p></div>
+<br><br>
+<div class="Log-button">
+  <%= link_to("Login", new_user_session_path) %>
+</div>
 <div id="gatinho">
   <img src="https://purepng.com/public/uploads/medium/515023081909vuwgucjvi37ke4sxsgi38bohmwvueskzfkd2gegbprpz9pc9z321pllryanukxpe9uxvuxltoszhjmxhlwff3anbuu2x4dcspqa.png" alt="Italian Trulli">
 </div>
 
-<br><br><br><br><br>
-<div class="Log-button">
-  <%= link_to("Login", new_user_session_path) %>
-</div>
 <br><br><br><br><br>
 <p id="warning">(Pode conter gatinhos curiosos)</p>
 </body>
