thays essa é para você

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,14 +1,17 @@
-<div>
-<div id="titulo"><h1>Sistema Original Segunda Linha UFFMeio</h1></div><br>
-<div id="inscricao"><p>Por favor, inicie sua sessão</p></div>
-<br><br>
+<body>
+<h1>Sistema Original Segunda Linha UFFMeio</h1><br>
+<div id="sunset">
+  <img src="https://cdn130.picsart.com/257679783014212.png?type=webp&to=min&r=1024" alt="sunset">
+</div>
+<div class="Subtitulo"><p>Por favor, inicie sua sessao</p></div><br>
+<div id="estatua"><img src="http://wcerfgba.github.io/AESTHETIC.css/memes/roman-statue.png" alt="gif2"> </div>
+<div id="gif"><img src="https://thumbs.gfycat.com/FirmGentleAfricanmolesnake-max-1mb.gif" alt="gif"></div>
+
 <div class="Log-button">
   <%= link_to("Login", new_user_session_path) %>
 </div>
-<div id="gatinho">
-  <img src="https://purepng.com/public/uploads/medium/515023081909vuwgucjvi37ke4sxsgi38bohmwvueskzfkd2gegbprpz9pc9z321pllryanukxpe9uxvuxltoszhjmxhlwff3anbuu2x4dcspqa.png" alt="Italian Trulli">
-</div>
+<div class="Log-button">
+  <%= link_to("Lista de usuarios", users_path)%></div>
 
-<br><br><br><br><br>
-<p id="warning">(Pode conter gatinhos curiosos)</p>
+
 </body>
