--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,10 +20,16 @@
 }
 
 * {
+
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
+
+#tabela{
+  margin-left:25%;
+}
+
 h2{
   display: inline-block;
   background-color: white;
@@ -34,15 +40,17 @@ h2{
 }
 
 h1{
+  z-index: 1;
   color: #ff2975;
   font-family: Cyberpunk;
   display: inline-block;
   background-color: #ffd319;
   margin-top: 10%;
+  margin-bottom: 50px;
   padding-left: 5px;
   padding-right: 5px;
   border-radius: 7px;
-  animation: shake 8s infinite;
+  //animation: shake 8s infinite;
 
 }
 
@@ -57,12 +65,27 @@ a{
 
 body{
   height: 100vh;
-  background-image: linear-gradient(#ff901f, #ff2975, #8c1eff);
+  background: linear-gradient(#ff901f, #ff2975, #8c1eff);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   text-align: center;
 
 }
 
+.Subtitulo{
+  z-index: 1;
+  padding-top: 10px;
+  font-family: Cyberpunk;
+  display: inline-block;
+  background-color: white;
+  border-radius: 7px;
+  font-size: 30px;
+  margin: 50px;
+
+}
+
 .Log-button{
+  background-color: rgb(0,0,0);
   position: relative;
   display: inline-block;
 
@@ -72,13 +95,27 @@ body{
   padding: 10px 10px 10px 10px;
 }
 
+#estatua{
+  position:absolute;
+  z-index: -1;
+  transform: scale(0.125,0.125);
+  top:-130%;
+  left:25%;
+}
 
+
+#gif{
+  position: absolute;
+  z-index: -2;
+  top: 55%;
+  left: 5%;
+}
 
 #form-mail{
   width: 20%;
   border-radius: 5px;
   margin: 10px auto;
-  background-color: cornflowerblue;
+  background-color: #4CAFCF;
   margin-bottom: 10px;
 }
 #opcoes{
@@ -95,37 +132,43 @@ body{
   background-color: red;
 }
 
-
-#inscricao{
-  display: inline-block;
-  background-color: white;
-  border-radius: 7px;
-  font-size: 30px;
-  margin: 50px;
+#windows{
+  z-index: -2;
+  position: absolute;
+  top: 34%;
+  left: -8%;
+  transform: scale(0.5,0.5);
 
 }
-#gatinho{
-  position: fixed;
-  top: 80px;
-  left: -100px;
-  z-index: -1;
-  animation: walk 8s infinite;
-}
 
-#gatinho2{
-  position: fixed;
-  top: 80px;
-  left: 10px;
-  z-index: -1;
-  animation: walk2 8s infinite;
-  animation-direction: alternate;
+#sunset{
+  position: absolute;
+  top: -29%;
+  right: -13%;
+  z-index: -5;
+  text-align: center;
 }
-
 #warning{
   color: #2E2F30;
 }
 
 
+
+//#gatinho{
+//  position: fixed;
+//  top: 80px;
+//  left: -100px;
+//  z-index: -1;
+//  animation: walk 8s infinite;
+//}
+//#gatinho2{
+//  position: fixed;
+//  top: 80px;
+//  left: 10px;
+//  z-index: -1;
+//  animation: walk2 8s infinite;
+//  animation-direction: alternate;
+//}
 
 @keyframes walk {
   0% {
@@ -154,16 +197,16 @@ body{
   }
 }
 
-@keyframes shake {
-  40% {
-    transform: rotate(0deg);
-  }
-  45% {
-    transform: rotate(-10deg) scale(1.05, 1.05);
-  }
-  50% {
-    transform: rotate(15deg) scale(1.05, 1.05);
-  }
-  55% {
-    transform: rotate(0deg);
-  }}
+//@keyframes shake {
+//  40% {
+//    transform: rotate(0deg);
+//  }
+//  45% {
+//    transform: rotate(-10deg) scale(1.05, 1.05);
+//  }
+//  50% {
+//    transform: rotate(15deg) scale(1.05, 1.05);
+//  }
+//  55% {
+//    transform: rotate(0deg);
+//  }}
