--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,13 +1,13 @@
 
 
 <h1>Users</h1>
-
-<table>
+<div id="tabela">
+<table >
   <thead>
     <tr>
-      <th>Email</th>
-      <th>Password</th>
-      <th>Matricula</th>
+      <th>Email </th>
+      <th>Password </th>
+      <th>Matricula </th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -25,7 +25,7 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
 <%= link_to 'Lista de alunos', students_path %> || <%= link_to 'Sign Out', destroy_user_session_path, method: :delete %>
